[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/toast.png" type="Texture" id=1]
[ext_resource path="res://assets/mainfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/Staatliches-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 39
font_data = SubResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Icon" type="TextureButton" parent="."]
margin_left = 48.0
margin_top = 24.0
margin_right = 392.0
margin_bottom = 368.0
texture_normal = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="."]
margin_left = 416.0
margin_top = 72.0
margin_right = 896.0
margin_bottom = 325.0
custom_fonts/font = ExtResource( 2 )
text = "OFTOAST
LAUNCHER"

[node name="Update" type="Button" parent="."]
margin_left = 112.0
margin_top = 416.0
margin_right = 320.0
margin_bottom = 480.0
custom_fonts/font = SubResource( 2 )
text = "Update"

[node name="Verify" type="Button" parent="."]
margin_left = 112.0
margin_top = 512.0
margin_right = 320.0
margin_bottom = 576.0
custom_fonts/font = SubResource( 2 )
text = "Verify"

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 384.0
margin_top = 416.0
margin_right = 960.0
margin_bottom = 448.0
percent_visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="Icon" to="." method="_on_Icon_pressed"]
[connection signal="pressed" from="Update" to="." method="_on_Update_pressed"]
[connection signal="pressed" from="Verify" to="." method="_on_Verify_pressed"]
